# gift-concierge

./: .gitignore  Cargo.toml  README.md  WORKFLOW.md  chat_plan.md  def_structure.yaml  plan.md
.github/workflows/: ci.yml
docs/implementation/: 00_overview.md  01_setup.md  02_core_components.md  03_testing.md  04_deployment.md
gift-advisor-frontend/: package-lock.json  package.json
gift-advisor-frontend/src/app/: page.tsx
gift-advisor-frontend/src/app/components/: Chat.tsx  GiftRecommendations.tsx
gift-advisor-frontend/src/app/hooks/: useWebSocket.ts
migrations/: 20240101000000_initial.sql
src/: error.rs  lib.rs  main.rs
src/api/: chat.rs  gift.rs  history.rs  mod.rs  recommendations.rs  websocket.rs
src/app/: error.rs  main.rs  mod.rs
src/app/api/: perplexity.rs
src/app/chat/: chatbot.rs  conversation_handler.rs  mod.rs  websocket.rs
src/app/components/: GiftForm.tsx  GiftRecommendations.tsx
src/app/database/: gift_cache.rs  mod.rs  models.rs  repositories.rs  user_record.rs
src/app/gift/: mod.rs  recommendation.rs
src/app/nlp/: intent_classifier.rs  mod.rs
src/app/pages/: GiftAdvisor.tsx
src/config/: .env  .env.development  .env.production  .env.staging  config.rs  mod.rs
src/docker/: Dockerfile  docker-compose.yaml
src/docs/: README.md
src/i18n/: en.json  ja.json  messages.rs  mod.rs
src/kubernetes/: deployment.yaml  service.yaml
src/test/: chat_test.rs  gift_test.rs  main_test.rs
src/tests/: load_tests.rs
tests/: integration_tests.rs  load_tests.rs
workflow/: test_procedure.md
