[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_project"
path = "src/lib.rs"

[[bin]]
name = "my-project"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.10" 