[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_project"
path = "src/lib.rs"

[[bin]]
name = "my-project"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.9", features = ["http2"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10" 
