[package]
name = "gift-advisor"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_project"
path = "src/lib.rs"

[[bin]]
name = "my-project"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.9", features = ["http2", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
actix-web = "4.4.0"
actix-cors = "0.6.4"

[dev-dependencies]
tempfile = "3.10" 
